--- a/svc/hecate/src/pages/home/index.module.scss
+++ b/svc/hecate/src/pages/home/index.module.scss
@@ -106,14 +106,27 @@ h1, h2, h3, h4, h5, h6 {
 .scene {
   position: fixed;
   bottom: 0;
-  left: 0;
-  width: 100vw;
-  height: 25vh;
-  z-index: 1000;
-  background: transparent;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  pointer-events: none;
+}
+
+.fire {
+  position: absolute;
+  bottom: -50px;
+  right: 10%;
+  width: 800px;
+  height: 600px;
+  background-image: url('/fire.webm');
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: contain;
+  opacity: 0.8;
+  mix-blend-mode: screen;
+  pointer-events: none;
+  z-index: 1;
 }
 
 /* Campfire with orange flicker */
