--- a/svc/hecate/src/pages/home/index.module.scss
+++ b/svc/hecate/src/pages/home/index.module.scss
@@ -12,6 +12,8 @@ $background-dark: #0a0a0a;
 $fog-color: rgba(20, 20, 20, 0.5);
 $accent-color: #2a4a6a;
 $echo-blue: #4a90e2;
+$echo-green: #00ff9d;
+$echo-orange: #ff7f00;
 $echo-gray: #b0b0b0;
 $echo-border: #3a3a3a;
 $text-color: #b0b0b0;
