--- a/svc/hecate/src/common/components/system-chat/system-chat.module.scss
+++ b/svc/hecate/src/common/components/system-chat/system-chat.module.scss
@@ -66,7 +66,8 @@ $text-color: #c8c8d0;
     top: 8rem;
     left: 50%;
     transform: translateX(-50%);
-    width: 91vw;
+    width: 85%;
+    max-width: 800px;
     height: auto;
     bottom: 4.5vh;
     margin: 0;
