--- a/svc/hecate/src/common/components/echo/echo.module.scss
+++ b/svc/hecate/src/common/components/echo/echo.module.scss
@@ -203,6 +203,25 @@
       &:active {
         transform: translateY(1px);
       }
+
+      &.locked {
+        opacity: 0.5;
+        cursor: not-allowed;
+        color: rgba($echo-gray, 0.7);
+        border-color: rgba($echo-gray, 0.3);
+
+        &:hover {
+          background: none;
+          color: rgba($echo-gray, 0.7);
+          text-shadow: none;
+        }
+
+        .lockIcon {
+          font-size: 0.8em;
+          opacity: 0.7;
+          margin-left: 0.5rem;
+        }
+      }
     }
   }
 
@@ -498,5 +517,20 @@
   100% {
     transform: translateY(100%);
     opacity: 0.5;
+  }
+}
+
+.lockedContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  text-align: center;
+  color: rgba($echo-gray, 0.7);
+  
+  p {
+    margin: 0.5rem 0;
+    font-style: italic;
   }
 }
